--- a/pages/MAO-01.html
+++ b/pages/MAO-01.html
@@ -49,7 +49,7 @@
         <li>
           <a href="">
             <div class="gallery-list__thumb">
-              <img src="/images/@thumb.png" alt="">
+              <img src="../images/@thumb.png" alt="">
             </div>
             <div class="gallery-list__info">
               <div class="gallery-list__category">건축/토목기사</div>
@@ -68,7 +68,7 @@
         <li>
           <a href="">
             <div class="gallery-list__thumb">
-              <img src="/images/@thumb.png" alt="">
+              <img src="../images/@thumb.png" alt="">
             </div>
             <div class="gallery-list__info">
               <div class="gallery-list__category">건축/토목기사</div>
@@ -87,7 +87,7 @@
         <li>
           <a href="">
             <div class="gallery-list__thumb">
-              <img src="/images/@thumb.png" alt="">
+              <img src="../images/@thumb.png" alt="">
             </div>
             <div class="gallery-list__info">
               <div class="gallery-list__category">건축/토목기사</div>
@@ -106,7 +106,7 @@
         <li>
           <a href="">
             <div class="gallery-list__thumb">
-              <img src="/images/@thumb.png" alt="">
+              <img src="../images/@thumb.png" alt="">
             </div>
             <div class="gallery-list__info">
               <div class="gallery-list__category">건축/토목기사</div>
