--- a/styleguide.html
+++ b/styleguide.html
@@ -268,7 +268,7 @@
           <li>
             <a href="">
               <div class="gallery-list__thumb">
-                <img src="./images/@thumb.png" alt="" />
+                <img src="../images/@thumb.png" alt="" />
                 <span class="ico-play"></span>
                 <span class="badge black"></span>
               </div>
@@ -289,7 +289,7 @@
           <li>
             <a href="">
               <div class="gallery-list__thumb">
-                <img src="./images/@thumb.png" alt="" />
+                <img src="../images/@thumb.png" alt="" />
               </div>
               <div class="gallery-list__info">
                 <div class="gallery-list__category">건축/토목기사</div>
@@ -308,7 +308,7 @@
           <li>
             <a href="">
               <div class="gallery-list__thumb">
-                <img src="./images/@thumb.png" alt="" />
+                <img src="../images/@thumb.png" alt="" />
               </div>
               <div class="gallery-list__info">
                 <div class="gallery-list__category">건축/토목기사</div>
@@ -327,7 +327,7 @@
           <li>
             <a href="">
               <div class="gallery-list__thumb">
-                <img src="./images/@thumb.png" alt="" />
+                <img src="../images/@thumb.png" alt="" />
               </div>
               <div class="gallery-list__info">
                 <div class="gallery-list__category">건축/토목기사</div>
