--- a/filelist.html
+++ b/filelist.html
@@ -96,6 +96,20 @@
             </td>
           </tr>
           <tr class="list">
+            <td>온라인과정 / 리스트보기</td>
+            <td><a href="pages/MAO-02.html" target="_blank">pages/MAO-02.html</a></td>
+            <td>2024.01.20</td>
+            <td>2024.01.20</td>
+            <td>x</td>
+            <td>x</td>
+            <td>x</td>
+            <td><span class="state m"></span></td>
+            <td><span class="state ing"></span></td>
+            <td>
+              <p class="t_em"></p>
+            </td>
+          </tr>
+          <tr class="list">
             <td>메뉴명1-2</td>
             <td><a href=".html" target="_blank">.html</a></td>
             <td>2024.00.00</td>
